xtremio/middleware-rate-limit-xtremio.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-xtremio
  namespace: xtremio
spec:
  # Intended to be suitable for public, casual, streaming use
  # Non-static pages which might incur lookups
  rateLimit:
    average: 1  # 1 request every ..
    period: 10s # 
    burst: 20   # allow burst up to 20 at once
